--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java-library'
+    id 'java'
 }
 
 repositories {
@@ -11,6 +11,7 @@ compileTestJava {
 
 dependencies {
     testImplementation 'com.codeborne:selenide:5.18.0'
+    testImplementation 'com.github.javafaker:javafaker:1.0.2'
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.2"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.2"
 }
