--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,51 @@
 plugins {
     id 'java'
+    id 'application'
+    id 'io.qameta.allure' version '2.8.1'
 }
 
 repositories {
     mavenCentral()
 }
+
+def allureVersion = "2.13.8",
+    selenideVersion = "5.18.0",
+    junitVersion = "5.7.0"
+
+allure {
+    version = "${allureVersion}"
+    autoconfigure = true
+    aspectjweaver = true
+    useJUnit5 {
+        version = "${allureVersion}"
+    }
+}
+
+dependencies {
+    testImplementation (
+            "com.codeborne:selenide:$selenideVersion",
+            "io.qameta.allure:allure-selenide:$allureVersion",
+            "com.github.javafaker:javafaker:1.0.2",
+            "org.hamcrest:hamcrest-all:1.3",
+            "org.junit.jupiter:junit-jupiter-api:$junitVersion",
+            "org.junit.jupiter:junit-jupiter-params:$junitVersion")
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
+}
+
 compileTestJava {
     options.encoding = "UTF-8"
 }
 
-dependencies {
-    testImplementation 'com.codeborne:selenide:5.18.0'
-    testImplementation 'com.github.javafaker:javafaker:1.0.2'
-    testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.2"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.2"
+tasks.withType(Test) {
+    systemProperties += System.properties
 }
 
 test {
     useJUnitPlatform()
+}
+
+task negative_tests(type: Test) {
+    useJUnitPlatform {
+        includeTags 'negative'
+    }
 }
